# streamlit

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  app.yaml  databricks.cfg  databricks.local.cfg  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
config/: datasets.json
deploy/cloud-run/: README.md  env.example  service.yaml
pages/: admin.py  dashboard.py  login.py  menu.py  menu_admin.py  summary_report.py  supply_report.py  users.py
scratch/: finalize_ui.py  update_ui.py
src/application/: __init__.py  demo_report_service.py
src/core/: __init__.py  audit.py  config.py  exceptions.py  logging_setup.py  reporting.py  streamlit_secrets.py
src/domain/: __init__.py  audit_models.py  auth_models.py  auth_validation.py  authorization_models.py  demo_report.py  filters.py  models.py  (+8 more)
tests/: conftest.py  test_admin_page.py  test_auth_service.py  test_auth_user_store.py  test_authorization_store.py  test_dashboard.py  test_dashboard_page.py  test_db_connection.py  test_e2e_login.py  test_e2e_report_filters.py  test_google_oauth_service.py  test_login_page.py  test_migrations.py  test_product_repository.py  test_product_repository_integration.py  test_product_service.py  test_report_filter_domain.py  test_report_filter_service.py  test_report_filter_service_integration.py  test_security_admin_service.py  test_session_guard.py  test_sql_warehouse_source.py  test_sso_auth_service.py  test_summary_report_page.py  test_user_repository.py  test_user_repository_integration.py  test_users_page.py
(+92 files in other folders)
